--- a/Luncher.Web/Views/Shared/_Layout.cshtml
+++ b/Luncher.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luncher</title>
+    <title>Jídelníčky</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Luncher.Web.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Luncher</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Jídelníčky</a>
             </div>
         </nav>
     </header>
@@ -24,7 +24,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Luncher
+            &copy; 2025 - Jídelníčky
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
